--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
+    "framer-motion": "^11.18.2",
     "gsap": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
