--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^5.7.10",
     "framer-motion": "^11.18.2",
     "gsap": "^3.13.0",
+    "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.5",
