--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^4.2.7",
+    "@react-spring/parallax": "^9.7.5",
     "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
