--- a/package.json
+++ b/package.json
@@ -15,12 +15,22 @@
     "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.509.0",
+    "motion": "^12.10.5",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
+    "tw-animate-css": "^1.2.9"
   }
 }
